# discordsocial

./: CMakeLists.txt  README.md  activity.cpp  authorization_code_challenge.cpp  authorization_code_verifier.cpp  client.cpp  client_result.cpp  main.cpp  util.cpp  util.hpp
php/: .gitignore  composer.json  test.php
php/src/: Activity.php  AuthenticationCodeChallengeMethod.php  AuthorizationCodeChallenge.php  AuthorizationCodeVerifier.php  AuthorizationTokenType.php  AuthorizeResult.php  Client.php  ClientResult.php  Error.php  ErrorType.php  GetTokenResult.php  HttpStatusCode.php  LoggingSeverity.php  NullEventDispatcher.php  Status.php  StatusChangedEvent.php
